# newsrag

./: .gitignore  LICENCE  README.md  app.py  config.py  config.yaml  dvc.yaml  environment.yaml  feeds.py  generator.py  news.ipynb  params.yaml  pipelines.py  push_to_hub.py  pyproject.toml  rag.py  requirements.txt  test.py  topics.py
conf/: config.yaml
data/: .gitignore
exp/: download_feeds.py  index_documents.py  model_topics.py
newsrag/: config.py  feeds.py  generator.py  pipelines.py  topics.py
tests/: test.py  test_feeds.py
tests/cassettes/test_feeds/: test_bbc_feeds.yaml
